[gd_scene load_steps=8 format=3 uid="uid://l0upxts66dv6"]

[ext_resource type="Script" uid="uid://q86xchglu3o3" path="res://_game/scripts/dialogue/dialogue_displayer.gd" id="1_ut04h"]
[ext_resource type="Resource" uid="uid://b8eke831n781m" path="res://_game/resources/dialogue/settings/dialogue_box_type_writter_settings.tres" id="2_8dee0"]
[ext_resource type="Resource" uid="uid://dpa6rtari6raf" path="res://_game/resources/flags/dialogue_line/gs_dialogue_requested.tres" id="3_tqglj"]
[ext_resource type="Texture2D" uid="uid://b74t4lencstit" path="res://_game/sprites/ui/Dialogue_Box.png" id="4_y3kj0"]
[ext_resource type="Script" uid="uid://bug5mvpu4eu35" path="res://_game/scripts/dialogue/dialogue_button.gd" id="5_8dee0"]

[sub_resource type="Gradient" id="Gradient_o55rc"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b5xf3"]
gradient = SubResource("Gradient_o55rc")

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -138.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="DialogueDisplayer" type="Node" parent="." node_paths=PackedStringArray("root", "rich_text_label", "timer", "button_list")]
script = ExtResource("1_ut04h")
root = NodePath("..")
rich_text_label = NodePath("../MarginContainer/RichTextLabel")
timer = NodePath("../LetterDisplayTimer")
button_list = [NodePath("../VBoxContainer/DialogueButton"), NodePath("../VBoxContainer/DialogueButton2")]
ds_ui_type = 1
ds_type_writter_settings = ExtResource("2_8dee0")
gs_finished_dialogue_sequence = ExtResource("3_tqglj")
metadata/_custom_type_script = "uid://q86xchglu3o3"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_y3kj0")
region_rect = Rect2(0, 0, 90, 27)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 35
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1262, 119)
rotation = 0.785398
scale = Vector2(0.19, 0.19)
texture = SubResource("GradientTexture2D_b5xf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -4.217
anchor_right = 1.0
offset_left = -1280.0
offset_top = -0.0540161
grow_horizontal = 0
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="DialogueButton" type="Button" parent="VBoxContainer" node_paths=PackedStringArray("dialogue_displayer", "rich_text_label")]
visible = false
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("5_8dee0")
dialogue_displayer = NodePath("../../DialogueDisplayer")
rich_text_label = NodePath("MarginContainer/RichTextLabel")
metadata/_custom_type_script = "uid://bug5mvpu4eu35"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/DialogueButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/DialogueButton/MarginContainer"]
layout_mode = 2
mouse_filter = 2
text = "YES"
scroll_active = false
vertical_alignment = 1

[node name="DialogueButton2" type="Button" parent="VBoxContainer" node_paths=PackedStringArray("dialogue_displayer", "rich_text_label")]
visible = false
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("5_8dee0")
dialogue_displayer = NodePath("../../DialogueDisplayer")
rich_text_label = NodePath("MarginContainer/RichTextLabel")
metadata/_custom_type_script = "uid://bug5mvpu4eu35"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/DialogueButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/DialogueButton2/MarginContainer"]
layout_mode = 2
mouse_filter = 2
text = "NO"
scroll_active = false
vertical_alignment = 1

[connection signal="finished_displaying_input" from="DialogueDisplayer" to="Sprite2D" method="set_visible" binds= [true]]
[connection signal="started_displaying" from="DialogueDisplayer" to="Sprite2D" method="set_visible" binds= [false]]
[connection signal="timeout" from="LetterDisplayTimer" to="DialogueDisplayer" method="display_letter"]
[connection signal="pressed" from="VBoxContainer/DialogueButton" to="VBoxContainer/DialogueButton" method="on_pressed"]
[connection signal="pressed" from="VBoxContainer/DialogueButton2" to="VBoxContainer/DialogueButton2" method="on_pressed"]
